--- a/src/modules/app/components/header/header.scss
+++ b/src/modules/app/components/header/header.scss
@@ -5,13 +5,13 @@
       .menu {
         display: none;
       }
-      .safebit {
+      .cryptoprint {
         margin: 0;
         min-width: 0;
         height: auto;
         display: flex;
         align-items: center;
-        .safebit-icon {
+        .cryptoprint-icon {
           width: 44px;
           height: 44px;
         }
