--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -9,3 +9,26 @@
     }
   }
 }
+
+.index-section {
+	section {
+		width: 100%;
+		border-bottom: 3px solid #bc5f87;
+		padding: 40px 0;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.video-intro {
+		padding: 80px 0 40px 0;
+        background: linear-gradient(to right, #073151 0, #1db6ad 100%);
+		height: 600px;
+		justify-content: center;
+		position: relative;
+		h1, h3, .btn {
+			z-index: 10;
+			color: #fff;
+		}
+	}
+}
