--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -31,4 +31,156 @@
 			color: #fff;
 		}
 	}
+  .attributes {
+		ul {
+			margin-top: 20px;
+			li {
+				display: flex;
+				align-items: center;
+				padding: 50px 0;
+				border-bottom: 1px solid #bc5f87;
+				div {
+					padding: 0 20px;
+					width: 100%;
+				}
+				img {
+					width: 150px;
+				}
+			}
+			li:nth-child(2n) {
+				flex-direction: row-reverse;
+			}
+			li:last-child {
+				border: none;
+			}
+		}
+	}
+	.testimonials {
+		background: linear-gradient(to right, #073151 0, #1db6ad 100%);
+		>h2 {
+			color: #fff;
+		}
+		ul {
+			width: 60%;
+			margin-bottom: 20px;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-around;
+			li {
+				background-color: #fff;
+				width: 45%;
+				margin-top: 40px;
+				display: flex;
+				flex-direction: column;
+				position: relative;
+				padding: 15px;
+				justify-content: space-between;
+				border-radius: 5px;
+				box-shadow: 2px 2px 7px grey;
+				.social-btn {
+					position: absolute;
+					top: 15px;
+					right: 15px;
+					//border: 1px solid grey;
+					padding: 10px 20px;
+					border-radius: 5px;
+					box-shadow: 2px 2px 7px grey;
+					i {
+						margin-right: 5px;
+					}
+				}
+				div {
+					display: flex;
+					align-items: center;
+					margin-bottom: 20px;
+					h3 {
+						margin-left: 15px;
+						font-weight: 100;
+					}
+					img {
+						border-radius: 50%;
+					}
+				}
+				p:last-child {
+					margin-top: 20px;
+					font-weight: normal;
+					font-size: 16px;
+					font-style: italic;
+				}
+			}
+		}
+	}
+	.team {
+
+		ul {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-around;
+			margin-top: 40px;
+			width: 60%;
+			li {
+				background-color: #fff;
+				width: 30%;
+				margin-bottom: 20px;
+				display: flex;
+				flex-direction: column;
+				padding: 15px;
+				justify-content: space-around;
+				align-items: center;
+				border-radius: 5px;
+				border: 1px solid #bc5f87;
+				padding: 40px;
+				//box-shadow: 2px 2px 7px grey;
+				img {
+					height: 150px;
+					width: 150px;
+					border-radius: 50%;
+					margin-bottom: 20px;
+				}
+				div {
+					display: flex;
+					margin-bottom: 20px;
+					h3 {
+						font-size: 18px;
+						font-weight: bold;
+					}
+					i {
+						font-size: 24px;
+						margin: 0 7px;
+						&:hover {
+							color: #bc5f87;
+							cursor: pointer;
+						}
+					}
+				}
+				p {
+					text-align: center;
+					font-size: 14px;
+				}
+			}
+		}
+	}
+	.second-cta {
+		border-width: 2px;
+		background: linear-gradient(to right, #073151 0, #1db6ad 100%);
+		h2, p, .btn {
+			width: 40%;
+			text-align: center;
+			color: #fff;
+		}
+		h2 {
+			margin-bottom: 20px;
+		}
+		.btn {
+			margin-top: 40px;
+			width: 20%;
+		}
+	}
+	.footer {
+		border: none;
+		p {
+			width: 100%;
+			padding-left: 120px;
+		}
+	}
 }
