--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -13,7 +13,6 @@
 .index-section {
 	section {
 		width: 100%;
-		border-bottom: 3px solid #bc5f87;
 		padding: 40px 0;
 		display: flex;
 		flex-direction: column;
@@ -22,7 +21,7 @@
 
 	.video-intro {
 		padding: 80px 0 40px 0;
-        background: linear-gradient(to right, #073151 0, #1db6ad 100%);
+    background: linear-gradient(to top, #666 0, #A4A3A8 100%);
 		height: 600px;
 		justify-content: center;
 		position: relative;
