loading data and writing preorder works - WIP

--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -175,7 +175,14 @@
 			width: 20%;
 		}
 	}
-	.footer {
+
+  .preorder {
+    article {
+      width: 320px;
+    }
+  }
+
+  .footer {
 		border: none;
 		p {
 			width: 100%;
