--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -1,3 +1,6 @@
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 .md-progress.pl {
   background: #CCC;
   > div {
@@ -20,15 +23,63 @@
 	}
 
 	.video-intro {
-		padding: 80px 0 40px 0;
-    background: linear-gradient(to top, #666 0, #A4A3A8 100%);
-		height: 600px;
-		justify-content: center;
-		position: relative;
-		h1, h3, .btn {
-			z-index: 10;
-			color: #fff;
-		}
+    .slick-next {
+      right: 0;
+      z-index: 12;
+    }
+    .slick-prev {
+      left: 0;
+      z-index: 12;
+    }
+    .hero {
+  		padding: 80px 0 40px 0;
+  		height: 600px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .content {
+    		text-align: center;
+        max-width: 450px;
+        margin: 0 auto;
+        z-index: 10;
+        position: relative;
+        > * {
+          position: relative;
+          z-index: 11;
+        }
+        &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          top: 0; right: 0;
+          bottom: 0; left: 0;
+          z-index: 9;
+          background: rgba(#000, 0.75);
+          filter: blur(80px);
+          margin: -80px;
+        }
+      }
+  		position: relative;
+      background-size: cover;
+  		h1, h3, .btn {
+  			z-index: 10;
+  			color: #fff;
+        white-space: normal;
+  		}
+      &-1 {
+        background-image: url('/images/product/a.jpg');
+      }
+      &-2 {
+        background-image: url('/images/product/b.jpg');
+      }
+      &-3 {
+        background-image: url('/images/product/c.jpg');
+      }
+      &-4 {
+        background-image: url('/images/product/d.jpg');
+      }
+    }
+
 	}
   .attributes {
 		ul {
