--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -37,6 +37,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      > small {
+        position: absolute;
+        right: 20px;
+        bottom: 20px;
+        color: rgba(#FFF, 0.75);
+      }
       .content {
     		text-align: center;
         max-width: 450px;
@@ -61,6 +67,7 @@
       }
   		position: relative;
       background-size: cover;
+      background-position: 50% 50%;
   		h1, h3, .btn {
   			z-index: 10;
   			color: #fff;
@@ -88,6 +95,7 @@
 				display: flex;
 				align-items: center;
 				padding: 50px 0;
+        max-width: 550px;
 				border-bottom: 1px solid #bc5f87;
 				div {
 					padding: 0 20px;
