--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -51,6 +51,7 @@ h2 {
         color: rgba(#FFF, 0.75);
       }
       .content {
+    		text-align: center;
         margin: 0 auto;
         z-index: 10;
         position: relative;
@@ -149,7 +150,7 @@ h2 {
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: space-around;
-			li {;
+			li {
 				background-color: #fff;
 				width: 45%;
 				margin-top: 40px;
@@ -160,8 +161,7 @@ h2 {
 				justify-content: space-between;
 				border-radius: 5px;
 				box-shadow: 2px 2px 7px grey;
-				}
-				div {
+				> div {
 					display: flex;
 					align-items: center;
 					margin-bottom: 20px;
