added scrolling to elements from header links

--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -3,7 +3,7 @@
 
 $md-light-theme: true; // optional for light theme
 $md-primary-color: $md-green-500;
-$md-secondary-color: $md-deep-purple-a-100;
+$md-secondary-color: $md-blue-800;
 
 @include react-md-everything;
 //
