--- a/src/modules/app/components/header/header.scss
+++ b/src/modules/app/components/header/header.scss
@@ -14,8 +14,14 @@
         .cryptoprint-icon {
           width: 44px;
           height: 44px;
+          path {
+            fill: rgba(255,255,255,0.987);
+          }
         }
       }
+    }
+    .md-btn {
+      color: rgba(#fff, 0.987);
     }
   }
 }
