--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -110,7 +110,7 @@ h2 {
 			li {
 				margin-bottom: 60px;
 				display: flex;
-				align-items: center;			
+				align-items: center;
 				img {
 					z-index: 11;
 					max-width: 210px;
@@ -210,7 +210,7 @@ h2 {
 					}
 				}
 			}
-	}	
+	}
 	.team {
 		background: #e6e4e2;
 		ul {
@@ -286,10 +286,38 @@ h2 {
 
   .footer {
 		border: none;
-		background: #FFF;
+		background: rgba(22, 22, 33, 0.98);
+		color: rgba(254, 253, 240, 0.98);
+		padding-top: 120px;
 		p {
 			width: 100%;
 			padding-left: 120px;
+			color: rgba(254, 253, 240, 0.98);
+		}
+		article {
+			margin-bottom: 4rem;
+			&.year {
+				color: rgba(140, 150, 156, 0.9);
+			}
+			&.with-love {
+				font-size: 13px;
+				opacity: 0.7;
+				&, * {
+					transition: all 120ms ease-in-out;
+					&:hover {
+						opacity: 0.98;
+					}
+				}
+				svg {
+					width: 12px !important;
+					height: 12px !important;
+					position: relative;
+					top: 2px;
+					path {
+						fill: rgba(250,30,10, 0.98);
+					}
+				}
+			}
 		}
 	}
   .preorder {
@@ -368,7 +396,7 @@ h2 {
 				text-align: center;
 				padding: 0 20px;
 				white-space: normal !important;
-				font-size:
+				font-size: normal;
 			}
 			ul {
 				flex-direction: column;
