--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -105,7 +105,7 @@ h2 {
 		ul {
 			margin-top: 20px;
 			padding: 0;
-			width: 50%;
+			max-width: 780px;
 			list-style-type: none;
 			li {
 				margin-bottom: 60px;
@@ -113,16 +113,19 @@ h2 {
 				align-items: center;
 				img {
 					z-index: 11;
-					max-width: 210px;
+					max-width: 310px;
 				}
 				div {
 					width: 80%;
 					padding: 60px;
 					h3 {
 						font-size: 25px !important;
+						font-weight: 300;
+						margin-bottom: 3rem;
 					}
 					p {
-						font-size: 20px !important;
+						font-size: 16px !important;
+						margin-bottom: 2rem;
 					}
 				}
 			}
@@ -213,22 +216,30 @@ h2 {
 	}
 	.team {
 		background: #e6e4e2;
+		padding: 11rem 0;
+		p {
+			max-width: 540px;
+			font-size: 16px;
+			margin-bottom: 2rem;
+		}
 		ul {
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: space-around;
 			margin-top: 40px;
 			width: 80%;
+			padding: 0;
 			li {
 				background-color: #fff;
 				width: 30%;
 				margin-bottom: 20px;
 				display: flex;
 				flex-direction: column;
-				padding: 4rem;
-				justify-content: space-around;
+				padding: 4rem 2rem;
+				justify-content: flex-start;
 				align-items: center;
 				border-radius: 5px;
+
 				//box-shadow: 2px 2px 7px grey;
 				.avatar {
 					height: 150px;
@@ -239,10 +250,20 @@ h2 {
 					img {
 						display: block;
 						margin: 0 auto;
-						width: 150px;
+						max-width: 150px;
 						height: 150px;
 						position: relative;
 					}
+				}
+				&.tid-shimond .avatar img {
+					transform: scale(1.8);
+					top: 16px;
+				}
+				&.tid-danielb .avatar img {
+					transform: scale(1.3);
+				}
+				&.tid-elis .avatar img {
+					transform: scale(1.2);
 				}
 				div {
 					display: flex;
