--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -39,7 +39,7 @@ h2 {
       z-index: 12;
     }
     .hero {
-  		padding: 80px 0 40px 0;
+  		padding: 120px 0;
   		height: 600px;
       display: flex;
       justify-content: center;
@@ -48,17 +48,18 @@ h2 {
         position: absolute;
         right: 20px;
         bottom: 20px;
-        color: rgba(#FFF, 0.75);
+        // color: rgba(#FFF, 0.75);
       }
       .content {
     		text-align: center;
         margin: 0 auto;
         z-index: 10;
+				height: 100%;
         position: relative;
-				height: 36%;
 				display: flex;
 				flex-direction: column;
-				justify-content: space-around;
+				// justify-content: space-around;
+				max-width: 640px;
         > * {
           position: relative;
           z-index: 11;
@@ -80,9 +81,28 @@ h2 {
       background-position: 50% 50%;
   		h1, h3, .btn {
   			z-index: 10;
-  			color: #fff;
+  			// color: #fff;
         white-space: normal;
   		}
+			.action {
+				margin-top: auto;
+			}
+			h1 {
+				margin-top: auto;
+				font-size: 50px;
+				font-weight: 900;
+				color: rgba(#FFF, 0.987);
+				text-shadow: 1px 1px 24px rgba(#000, 0.543),  -1px -1px 14px rgba(#000, 0.543),  0px 0px 7px rgba(#000, 0.543);
+				font-family: 'Play', sans-serif;
+				line-height: 5rem;
+			}
+			h3 {
+				font-size: 30px;
+				font-weight: 300;
+				line-height: 4rem;
+				color: rgba(#FFF, 0.987);
+				text-shadow: 1px 1px 24px rgba(#000, 0.543),  -1px -1px 14px rgba(#000, 0.543),  0px 0px 7px rgba(#000, 0.543);
+			}
 			.btn {
 				font-size: 19px;
 			}
@@ -98,6 +118,15 @@ h2 {
       &-4 {
         background-image: url('/images/product/d.jpg');
       }
+			&:nth-child(odd) {
+				.content {
+					// text-align: left;
+				}
+			}
+			&.slick-active {
+				z-index: 100;
+				
+			}
     }
 
 	}
