visual touchups and arranged scss for index

--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -19,6 +19,7 @@ h2 {
     }
   }
 }
+$breakpoint: 500px;
 
 .index-section {
 	section {
@@ -28,512 +29,13 @@ h2 {
 		flex-direction: column;
 		align-items: center;
 	}
-
-	.video-intro {
-    .slick-next {
-      right: 50px;
-      z-index: 12;
-    }
-    .slick-prev {
-      left: 50px;
-      z-index: 12;
-    }
-    .hero {
-  		padding: 120px 0;
-  		height: 600px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      > small {
-        position: absolute;
-        right: 20px;
-        bottom: 20px;
-        // color: rgba(#FFF, 0.75);
-      }
-      .content {
-    		text-align: center;
-        margin: 0 auto;
-        z-index: 10;
-				height: 100%;
-        position: relative;
-				display: flex;
-				flex-direction: column;
-				// justify-content: space-around;
-				max-width: 640px;
-        > * {
-          position: relative;
-          z-index: 11;
-        }
-        &::after {
-          content: "";
-          display: block;
-          position: absolute;
-          top: 0; right: 0;
-          bottom: 0; left: 0;
-          z-index: 9;
-          background: rgba(#000, 0.75);
-          filter: blur(80px);
-          margin: -80px;
-        }
-      }
-  		position: relative;
-      background-size: cover;
-      background-position: 50% 50%;
-  		h1, h3, .btn {
-  			z-index: 10;
-  			// color: #fff;
-        white-space: normal;
-  		}
-			.action {
-				margin-top: auto;
-			}
-			h1 {
-				margin-top: auto;
-				font-size: 50px;
-				font-weight: 900;
-				color: rgba(#FFF, 0.987);
-				text-shadow: 1px 1px 24px rgba(#000, 0.543),  -1px -1px 14px rgba(#000, 0.543),  0px 0px 7px rgba(#000, 0.543);
-				font-family: 'Play', sans-serif;
-				line-height: 5rem;
-			}
-			h3 {
-				font-size: 30px;
-				font-weight: 300;
-				line-height: 4rem;
-				color: rgba(#FFF, 0.987);
-				text-shadow: 1px 1px 24px rgba(#000, 0.543),  -1px -1px 14px rgba(#000, 0.543),  0px 0px 7px rgba(#000, 0.543);
-			}
-			.btn {
-				font-size: 19px;
-			}
-      &-1 {
-        background-image: url('/images/product/a.jpg');
-      }
-      &-2 {
-        background-image: url('/images/product/b.jpg');
-      }
-      &-3 {
-        background-image: url('/images/product/c.jpg');
-      }
-      &-4 {
-        background-image: url('/images/product/d.jpg');
-      }
-			&:nth-child(odd) {
-				.content {
-					// text-align: left;
-				}
-			}
-			&.slick-active {
-				z-index: 100;
-				
-			}
-    }
-
-	}
-	.attributes {
-		ul {
-			margin-top: 20px;
-			padding: 0;
-			max-width: 780px;
-			list-style-type: none;
-			li {
-				margin-bottom: 60px;
-				display: flex;
-				align-items: center;
-				img {
-					z-index: 11;
-					max-width: 310px;
-				}
-				div {
-					width: 80%;
-					padding: 60px;
-					h3 {
-						font-size: 25px !important;
-						font-weight: 300;
-						margin-bottom: 3rem;
-					}
-					p {
-						font-size: 16px !important;
-						margin-bottom: 2rem;
-					}
-				}
-			}
-			li:nth-child(2n) {
-	 			flex-direction: row-reverse;
-				img {
-					margin-right: -20px;
-				}
-	 		}
-		}
-	}
-	.testimonials {
-		background: #e6e4e2;
-		ul {
-			width: 60%;
-			margin-bottom: 20px;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-around;
-			li {
-				background-color: #fff;
-				width: 45%;
-				margin-top: 40px;
-				display: flex;
-				flex-direction: column;
-				position: relative;
-				padding: 15px;
-				justify-content: space-between;
-				border-radius: 5px;
-				box-shadow: 2px 2px 7px grey;
-				div {
-					display: flex;
-					align-items: center;
-					margin-bottom: 20px;
-					h3 {
-						margin-left: 15px;
-						font-weight: 100;
-					}
-					img {
-						border-radius: 50%;
-					}
-				}
-				p:last-child {
-					margin-top: 20px;
-					font-weight: normal;
-					font-size: 16px;
-					font-style: italic;
-				}
-			}
-		}
-	}
-	.social {
-		background:#e6e4e2;
-			align-items: center;
-			ul {
-			display: flex;
-			margin-top: 0;
-			width: 20%;
-			justify-content: space-between;
-			list-style-type: none;
-			padding: 0;
-				li {
-					display: flex;
-					justify-content: space-around;
-					align-items: center;
-					padding: 0;
-					padding: 10px;
-					background: #fff;
-					border-radius: 30px;
-					.fa {
-						font-size: 24px;
-						margin-right: 10px;
-					}
-					.fa-facebook {
-						color: #fff;
-					}
-					&:last-child {
-						background: #3b5998;
-						div {
-							color: #fff;
-						}
-					}
-					.fa-telegram {
-						color: #0088CC;
-					}
-				}
-			}
-	}
-	.team {
-		background: #e6e4e2;
-		padding: 11rem 0;
-		p {
-			max-width: 540px;
-			font-size: 16px;
-			margin-bottom: 2rem;
-		}
-		ul {
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-around;
-			margin-top: 40px;
-			width: 80%;
-			padding: 0;
-			li {
-				background-color: #fff;
-				width: 30%;
-				margin-bottom: 20px;
-				display: flex;
-				flex-direction: column;
-				padding: 4rem 2rem;
-				justify-content: flex-start;
-				align-items: center;
-				border-radius: 5px;
-
-				//box-shadow: 2px 2px 7px grey;
-				.avatar {
-					height: 150px;
-					width: 150px;
-					border-radius: 50%;
-					margin-bottom: 20px;
-					overflow: hidden;
-					img {
-						display: block;
-						margin: 0 auto;
-						max-width: 150px;
-						height: 150px;
-						position: relative;
-					}
-				}
-				&.tid-shimond .avatar img {
-					transform: scale(1.8);
-					top: 16px;
-				}
-				&.tid-danielb .avatar img {
-					transform: scale(1.3);
-				}
-				&.tid-elis .avatar img {
-					transform: scale(1.2);
-				}
-				div {
-					display: flex;
-					margin-bottom: 20px;
-					h3 {
-						font-size: 20px;
-						font-weight: bold;
-					}
-					i {
-						font-size: 24px;
-						margin: 0 7px;
-						&:hover {
-							color: #bc5f87;
-							cursor: pointer;
-						}
-					}
-				}
-				p {
-					text-align: center;
-					font-size: 14px;
-				}
-			}
-		}
-	}
-	.second-cta {
-		border-width: 2px;
-		background: linear-gradient(to right, #073151 0, #1db6ad 100%);
-		h2, p, .btn {
-			width: 40%;
-			text-align: center;
-			color: #fff;
-		}
-		h2 {
-			margin-bottom: 20px;
-		}
-		.btn {
-			margin-top: 40px;
-			width: 20%;
-		}
-	}
-	.newsletter {
-		.form-container {
-			display: flex;
-			width: 50%;
-			background: #e6e4e2;
-			padding: 30px;
-			justify-content: space-between;
-			input {
-				border: none !important;
-				background: transparent;
-				border-bottom: 2px solid black!important;
-				width: 75%;
-				font-size: 16px;
-				outline: none;
-				&:focus {
-					outline: none;
-				}
-			}
-			.submit-btn {
-				width: 20%;
-				border: none;
-				font-size: 16px;
-				background: #fff;
-				padding: 15px;
-				border-radius: 12px;
-				&:focus {
-					outline: none;
-				}
-				&:hover {
-					cursor: pointer;
-				}
-			}
-		}
-	}
-  .footer {
-		border: none;
-		background: rgba(22, 22, 33, 0.98);
-		color: rgba(254, 253, 240, 0.98);
-		padding-top: 120px;
-		p {
-			width: 100%;
-			padding-left: 120px;
-			color: rgba(254, 253, 240, 0.98);
-		}
-		article {
-			margin-bottom: 4rem;
-			&.year {
-				color: rgba(140, 150, 156, 0.9);
-			}
-			&.with-love {
-				font-size: 13px;
-				opacity: 0.7;
-				&, * {
-					transition: all 120ms ease-in-out;
-					&:hover {
-						opacity: 0.98;
-					}
-				}
-				svg {
-					width: 12px !important;
-					height: 12px !important;
-					position: relative;
-					top: 2px;
-					path {
-						fill: rgba(250,30,10, 0.98);
-					}
-				}
-			}
-		}
-	}
-  .preorder {
-		.md-card {
-			padding: 3rem 6rem;
-	    article {
-	      width: 320px;
-				margin-bottom: 2rem;
-				.md-cell {
-					margin: 0;
-				}
-	    }
-		}
-  }
-
-}
-
-@media only screen and (max-width: 500px) {
-	.App {
-		.attributes {
-			h3 {
-				white-space: normal!important;								
-			}
-			ul {
-				width: 95%;
-				li {
-					flex-direction: column;
-					div {
-						padding: 20px;
-						h3, p {
-							text-align: center;
-						}
-					}
-				}
-				li:nth-child(2n) {
-					flex-direction: column;
-					img {
-						margin: 0;
-					}
-				}
-			}
-		}
-		.testimonials {
-			ul {
-				padding: 0;
-				width: 95%;
-				li {
-					width: 90%;
-				}
-			}
-		}
-		.team {
-			padding: 1.2rem 0;
-			>p {
-				width: 95%;
-				text-align: center;
-			}
-			ul {
-				width: 95%;
-				padding: 0;
-				.team-member {
-					width: 90%;
-				}
-			}
-		}
-		.preorder {
-			.md-card {
-				padding: 0;
-				width: 95%;
-				padding: 40px;
-				h2 {
-					text-align: center;
-					margin-bottom: 40px;
-				}
-				.actions {
-					width: 100%;
-					display: flex;
-					justify-content: center;
-				}
-			}
-		}
-		.social {
-			h3 {
-				text-align: center;
-				padding: 0 20px;
-				white-space: normal !important;
-				font-size: normal;
-			}
-			ul {
-				flex-direction: column;
-				padding: 0;
-				width: 60%;
-				align-items: center;
-				li {
-					padding: 0;
-					padding: 10px;
-					width: 80%;
-					margin-bottom: 20px;
-					background: #fff;
-					flex-direction: row;
-					border-radius: 30px;
-					.fa {
-						font-size: 24px;
-					}
-					.fa-telegram {
-						color: #0088CC;
-					}
-				}
-			}
-		}
-		.newsletter {
-			h3 {
-				white-space: normal!important;
-				word-break: break-all;
-				width: 95%;
-				text-align: center;
-			}
-			.form-container {
-				flex-direction: column;
-				width: 95%;
-				align-items: center;
-				.submit-btn {
-					margin-top: 20px;
-					width: 50%;
-
-				}
-			}
-		}
-		.footer {
-			p {
-				padding: 0;
-				text-align: center;
-			}
-		}
-	}
+	@import './parts/hero.scss';
+	@import './parts/attributes.scss';
+	@import './parts/testimonials.scss';
+	@import './parts/social.scss';
+	@import './parts/team.scss';
+	@import './parts/second-cta.scss';
+	@import './parts/newsletter.scss';
+	@import './parts/preorder.scss';
+	@import './parts/footer.scss';
 }
