add preloader with Timeout

--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -26,3 +26,19 @@ body {
     }
   }
 }
+
+.preloader-wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, .5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    display: block;
+    width: 200px;
+  }
+}
