--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -37,8 +37,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
   img {
     display: block;
-    width: 200px;
+    width: 100px;
   }
 }
