--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Play');
+@import url('/fonts-onepager/font.css');
 @import 'globals';
 
 body {
