--- a/src/modules/cryptoprint/onepager/onepager.scss
+++ b/src/modules/cryptoprint/onepager/onepager.scss
@@ -171,6 +171,7 @@ $margin-b: 255px;
       max-width: 330px;
       margin-right: 6%;
       margin-top: -20px;
+      flex-shrink: 0;
       @include tablet {
         max-width: 100%;
         margin-top: 0;
@@ -318,7 +319,7 @@ $margin-b: 255px;
     li {
       list-style-type: none;
       border-radius: 50%;
-      border: 1px solid $medium-grey;
+      border: 1px solid #ccc;
       width: 70px;
       height: 70px;
       flex: 0 0 70px;
@@ -326,6 +327,9 @@ $margin-b: 255px;
       justify-content: center;
       align-items: center;
       margin-left: 20px;
+      &:hover {
+        background: rgba(0, 0, 0, .4);
+      }
       @include tablet {
         width: 40px;
         height: 40px;
@@ -333,10 +337,9 @@ $margin-b: 255px;
       }
       a {
         display: block;
-        img {
-          width: 60%;
-          display: block;
-          margin: 0 auto;
+        line-height: 1;
+        svg {
+          fill: #ccc;
         }
       }
     }
