--- a/src/modules/cryptoprint/onepager/onepager.scss
+++ b/src/modules/cryptoprint/onepager/onepager.scss
@@ -340,6 +340,8 @@ $margin-b: 255px;
         line-height: 1;
         svg {
           fill: #ccc;
+          width: 30px;
+          height: 30px;
         }
       }
     }
