fix fonts & scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Play');
-@import url('/fonts-onepager/font.css');
+@import url('/fonts-onepager/fonts.css');
 @import 'globals';
 
 body {
