--- a/src/modules/cryptoprint/onepager/onepager.scss
+++ b/src/modules/cryptoprint/onepager/onepager.scss
@@ -17,7 +17,9 @@ $margin-b: 255px;
   }
 }
 
-
+a {
+  text-decoration: none;
+}
 .container {
   max-width: 1300px;
   margin: 0 auto;
@@ -377,6 +379,7 @@ $margin-b: 255px;
 
 }
 .img-wrap {
+  display: inline-block;
   img {
     max-width: 100%;
     display: block;
