--- a/src/modules/cryptoprint/sections/index/parts/preorder.scss
+++ b/src/modules/cryptoprint/sections/index/parts/preorder.scss
@@ -1,31 +1,37 @@
   @import '../config';
 
   .preorder {
-		.md-card {
-			padding: 3rem 6rem;
-	    article {
-	      width: 320px;
-				margin-bottom: 2rem;
-				.md-cell {
-					margin: 0;
-				}
-	    }
+    background: #5E616A;
+    background-size: cover;
+    position: relative;
+    color: #fff;
+    p {
+      color: #fff;
+    }
+      .md-card {
+          padding: 3rem 6rem;
+      article {
+        width: 320px;
+        margin-bottom: 2rem;
+        .md-cell {
+            margin: 0;
+        }
+      }
     }
     @media only screen and (max-width: $breakpoint) {
 
-  		.md-card {
-  			padding: 0;
-  			width: 95%;
-  			padding: 40px;
-  			h2 {
-  				text-align: center;
-  				margin-bottom: 40px;
-  			}
-  			.actions {
-  				width: 100%;
-  				display: flex;
-  				justify-content: center;
-  			}
-  		}
+      .md-card {
+        width: 95%;
+        padding: 40px;
+        h2 {
+          text-align: center;
+          margin-bottom: 40px;
+        }
+        .actions {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+        }
+      }
   }
 }
