--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -30,9 +30,11 @@ h2 {
 	}
 	@import './parts/hero.scss';
 	@import './parts/attributes.scss';
+	@import './parts/features.scss';
 	@import './parts/testimonials.scss';
 	@import './parts/social.scss';
 	@import './parts/team.scss';
+	@import './parts/community.scss';
 	@import './parts/second-cta.scss';
 	@import './parts/newsletter.scss';
 	@import './parts/preorder.scss';
