--- a/src/modules/cryptoprint/sections/index/parts/attributes.scss
+++ b/src/modules/cryptoprint/sections/index/parts/attributes.scss
@@ -3,27 +3,27 @@
   ul {
     margin-top: 20px;
     padding: 0;
-    max-width: 780px;
+    max-width: 1920px;
     list-style-type: none;
     li {
       margin-bottom: 60px;
       display: flex;
       align-items: center;
-      img {
-        z-index: 11;
-        max-width: 310px;
-      }
-      div {
-        width: 80%;
-        padding: 60px;
-        h3 {
-          font-size: 25px !important;
-          font-weight: 300;
-          margin-bottom: 3rem;
-        }
-        p {
-          font-size: 16px !important;
-          margin-bottom: 2rem;
+      justify-content: flex-end;
+      >div {
+        flex: 1 0 50%;
+        .text-block {
+          max-width: 380px;
+          margin: 0 auto;
+          h3 {
+            font-size: 25px;
+            font-weight: 300;
+            margin-bottom: 3rem;
+          }
+          p {
+            font-size: 16px;
+            margin-bottom: 2rem;
+          }
         }
       }
     }
