--- a/src/modules/cryptoprint/sections/index/_config.scss
+++ b/src/modules/cryptoprint/sections/index/_config.scss
@@ -1,1 +1,16 @@
 $breakpoint: 500px;
+$dark-grey: #555864;
+$main-color: #f68687;
+
+@mixin mobile {
+  @media (max-width: 640px) {
+    @content
+  }
+}
+
+
+@mixin tablet {
+  @media (max-width: 1024px) {
+    @content
+  }
+}
