--- a/src/modules/cryptoprint/sections/index/parts/community.scss
+++ b/src/modules/cryptoprint/sections/index/parts/community.scss
@@ -1,2 +1,59 @@
   @import '../config';
 
+  .flex-container {
+    display: flex;
+    @include tablet {
+      flex-direction: column;
+    }
+  }
+  .community {
+    .text {
+      align-self: center;
+      flex: 1 1 50%;
+      margin-left: 20px;
+      p {
+        font-size: 18px;
+        max-width: 280px;
+      }
+    }
+  }
+  .social-links {
+    display: flex;
+    padding: 0;
+    margin: 30px 0 20px;
+    @include tablet {
+      margin-top: 10px;
+    }
+    li {
+      list-style-type: none;
+      border-radius: 50%;
+      border: 1px solid #ccc;
+      width: 70px;
+      height: 70px;
+      flex: 0 0 70px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 20px;
+      &:hover {
+        background: rgba(0, 0, 0, .4);
+      }
+      &:first-child {
+        margin-left: 0;
+      }
+      @include tablet {
+        width: 40px;
+        height: 40px;
+        flex: 0 0 40px;
+      }
+      a {
+        display: block;
+        line-height: 1;
+        svg {
+          fill: $dark-grey;
+          width: 30px;
+          height: 30px;
+        }
+      }
+    }
+  }
